[ADD]:add Auth register login logout opi documentation
